--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "@storybook/html": "^7.0.0-beta.19",
     "@storybook/html-vite": "^7.0.0-beta.19",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.0-beta.19",
+    "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.4",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@storybook/addon-styling": "^0.3.2",
     "@storybook/web-components": "^6.5.16",
-    "solid-js": "^1.6.2"
+    "lightweight-charts": "^4.0.1",
+    "postcss-loader": "^7.1.0",
+    "solid-js": "^1.6.2",
+    "zod": "^3.21.4"
   }
 }
