--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@storybook/web-components": "^6.5.16",
     "lightweight-charts": "^4.0.1",
     "postcss-loader": "^7.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "solid-js": "^1.6.2",
     "zod": "^3.21.4"
   }
