--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,20 +1,17 @@
 name: Build and Deploy Storybook
-on:
-  push:
-    branches:
-      - "master" # Trigger the action only pushed to a specific branch
-      - "!main" # Ignore if pushed to a specific branch
+on: push
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+      - name: Checkout
+        uses: actions/checkout@master
 
-      - name: Merge master -> storybook-deploy 🚀
-        uses: devmasx/merge-branch@1.4.0
-        with:
-          type: now
-          from_branch: master
-          target_branch: storybook-deploy
-          github_token: ${{ github.token }}
+      - name: Build and deploy to storybook-static branch
+        uses: JamesIves/github-pages-deploy-action@2.0.3
+        env:
+          ACCESS_TOKEN: ${{ secrets.BDOUGIE_TOKEN }}
+          BRANCH: storybook-deploy
+          FOLDER: storybook-deploy
+          BUILD_SCRIPT: npm install && npm run build-storybook
