--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,17 +1,20 @@
 name: Build and Deploy Storybook
-on: push
-
+on:
+  push:
+    branches:
+      - "*"
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
+      - name: Checkout 🛎️
+      - uses: actions/checkout@master
 
-      - name: Build and deploy to storybook-static branch
-        uses: JamesIves/github-pages-deploy-action@2.0.3
-        env:
-          ACCESS_TOKEN: ${{ secrets.BDOUGIE_TOKEN }}
-          BRANCH: storybook-deploy
-          FOLDER: storybook-deploy
-          BUILD_SCRIPT: npm install && npm run build-storybook
+      - name: Merge development -> staging
+        uses: devmasx/merge-branch@1.4.0
+
+        with:
+          type: now
+          from_branch: master
+          target_branch: storybook-deploy
+          github_token: ${{ secrets.GITHUB_TOKEN }}
