--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,8 +1,7 @@
 name: Build and Deploy Storybook
 on:
-  push:
-    branches:
-      - "*"
+  push
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
