--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,17 +2,17 @@ name: Build and Deploy Storybook
 on:
   push:
     branches:
-      - "*"
+      - "master" # Trigger the action only pushed to a specific branch
+      - "!main" # Ignore if pushed to a specific branch
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-      - uses: actions/checkout@master
+        uses: actions/checkout@v2.3.1
 
-      - name: Merge development -> staging
+      - name: Merge master -> storybook-deploy 🚀
         uses: devmasx/merge-branch@1.4.0
-
         with:
           type: now
           from_branch: master
